Refactor, support pagination for listCounters()