@@ -2,7 +2,6 @@ package org.berk.distributedcounter.rest;
 
 import com.hazelcast.core.HazelcastInstance;
 import org.berk.distributedcounter.api.EventCount;
-import org.berk.distributedcounter.api.EventId;
 import org.berk.distributedcounter.counter.Counter;
 import org.glassfish.hk2.api.TypeLiteral;
 import org.glassfish.jersey.internal.inject.AbstractBinder;
@@ -20,8 +19,9 @@ import javax.ws.rs.client.Entity;
 import javax.ws.rs.core.Application;
 import javax.ws.rs.core.GenericType;
 import javax.ws.rs.core.Response;
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import static javax.ws.rs.core.MediaType.APPLICATION_JSON_TYPE;
 import static javax.ws.rs.core.Response.Status.METHOD_NOT_ALLOWED;
@@ -60,8 +60,8 @@ public class CounterResourceTest extends JerseyTest {
 
     @Test
     public void increment() {
-        int status =  target("counter/increment").request(APPLICATION_JSON_TYPE)
-                .put(Entity.entity(new EventId("abc"), APPLICATION_JSON_TYPE))
+        int status = target("counter/increment/abc").request(APPLICATION_JSON_TYPE)
+                .put(Entity.entity("", APPLICATION_JSON_TYPE))
                 .getStatus();
         assertEquals(200, status);
     }
@@ -69,25 +69,26 @@ public class CounterResourceTest extends JerseyTest {
     @Test
     public void getCount() {
         doReturn(5L).when(counter).getCount(eq("user1"));
-        EventCount eventCount =  target("counter/count").queryParam("event_id", "user1")
+        EventCount eventCount =  target("counter/count/user1")
                 .request(APPLICATION_JSON_TYPE).get(EVENT_COUNT_STRING_TYPE);
-        assertEquals(  new EventCount("user1", 5L), eventCount);
+        assertEquals(new EventCount("user1", 5L), eventCount);
     }
 
     @Test
     public void getSize() {
         doReturn(3).when(counter).getSize();
         Integer size =  target("counter/listsize")
-                .request(APPLICATION_JSON_TYPE).get(Integer.class);
+                .request(APPLICATION_JSON_TYPE)
+                .get(Integer.class);
         assertEquals(3, size.intValue());
     }
 
     @Test
     public void getCountersList() {
-        when(counter.listAllCounters(null , null)).thenReturn(
-                Arrays.asList(new EventCount("user1", 1L),
+        when(counter.listCounters(null , null)).thenReturn(
+                List.of(new EventCount("user1", 1L),
                         new EventCount("user2", 2L)));
-        List<EventCount> counters = target("counter/counters")
+        List<EventCount> counters = target("counter/list")
                 .request(APPLICATION_JSON_TYPE).get(LIST_OF_EVENT_COUNT_TYPE);
         assertEquals(2, counters.size());
         assertEquals(new EventCount("user1", 1L), counters.get(0));
@@ -95,9 +96,24 @@ public class CounterResourceTest extends JerseyTest {
     }
 
     @Test
+    public void getCountersList_should_reject_negative_item_count() {
+        when(counter.listCounters(null , null)).thenReturn(
+                List.of(new EventCount("user1", 1L),
+                        new EventCount("user2", 2L)));
+        Response response = target("counter/list")
+                .queryParam("from_index", 1)
+                .queryParam("item_count", -4)
+                .request(APPLICATION_JSON_TYPE)
+                .get();
+        assertEquals(400, response.getStatus());
+        System.out.println(response.getEntity());
+    }
+
+
+    @Test
     public void errorHandling() {
         when(counter.getCount(anyString())).thenThrow(new IllegalArgumentException());
-        Response response =  target("counter/count").queryParam("event_id", "user1")
+        Response response =  target("counter/count/user1")
                 .request(APPLICATION_JSON_TYPE).get();
         assertEquals(METHOD_NOT_ALLOWED.getStatusCode(), response.getStatus());
         assertEquals(APPLICATION_JSON_TYPE, response.getMediaType());
